fixed the interested from messing up the rest of the site on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,8 @@ h5 {
 }
 
 h6 {
-  font-size: 6rem;
+  font-size: 2.9rem;
+  width: 100%;
 }
 
 em,
